--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<head>
 
+	<!-- bootstrap required elements	 -->
+ 	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Natalie and Dagmawit's Project!</title>
+
+</head>
+
+<body>
+
+
+
+</body>
